@@ -163,7 +163,8 @@ def create_url(context, obj, request=None):
         slug = zeit.web.site.view_video.Video.get_slug(obj)
         # titles = (t for t in (obj.supertitle, obj.title) if t)
         # slug = zeit.cms.interfaces.normalize_filename(u' '.join(titles))
-        return create_url(context, u'{}/{}'.format(obj.uniqueId, slug))
+        return create_url(
+            context, u'{}/{}'.format(obj.uniqueId, slug), request)
     elif zeit.cms.interfaces.ICMSContent.providedBy(obj):
         return create_url(context, obj.uniqueId, request=request)
     else:
